# ETL

./: 0001-Creating-Application.patch  Dockerfile.etl  README.md  docker-compose.yml  example.txt  init.sql
Solution/: implementation.md
Solution/Solution/Cloud Implementation/: gcp.md
data/test_datasets/: test.csv
etl/: pyproject.toml
etl/etl/: main.py
etl/tests/: integration-test.py  unit-test.py
