[tool.poetry]
name = "etl"
version = "0.1.0"
description = "pyspark pipeline using local csv as source , and postgres as destination"
authors = ["amit-singh amitsinghoec@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.3.3"
pytest = "7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
